<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.rec_commend.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_msearch"
        android:name="com.example.rec_commend.ui.msearch.MsearchFragment"
        android:label="@string/title_msearch"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_msearch_to_navigation_song_list"
            app:destination="@id/navigation_song_list" />
    </fragment>

    <fragment
        android:id="@+id/navigation_tsearch"
        android:name="com.example.rec_commend.ui.tsearch.TsearchFragment"
        android:label="@string/title_tsearch"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_tsearch_to_navigation_song_list"
            app:destination="@id/navigation_song_list" />
    </fragment>

    <fragment
        android:id="@+id/navigation_option"
        android:name="com.example.rec_commend.ui.option.OptionFragment"
        android:label="@string/title_option"
        tools:layout="@layout/fragment_option" >
        <action
            android:id="@+id/action_navigation_option_to_navigation_preference"
            app:destination="@id/navigation_preference" />
    </fragment>

    <fragment
        android:id="@+id/navigation_song_list"
        android:name="com.example.rec_commend.ui.song_list.SongListFragment"
        android:label="@string/title_song_list"
        tools:layout="@layout/fragment_song_list" />

    <fragment
        android:id="@+id/navigation_preference"
        android:name="com.example.rec_commend.ui.option.SettingsFragment"
        android:label="@string/title_preference"
        tools:layout="@layout/fragment_preference" />

    <fragment
        android:id="@+id/navigation_share"
        android:name="com.example.rec_commend.ui.share.VoiceColorFragment"
        android:label="@string/title_share"
        tools:layout="@layout/fragment_voice_color" />

</navigation>