<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/msearch_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="15dp"
        app:cardElevation="2dp">

        <TextView
            android:id="@+id/msearch_btn_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_200"
            android:fontFamily="@font/nanum_square_extra_bold"
            android:padding="20dp"
            android:text="@string/title_msearch"
            android:textColor="@color/white"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/msearch_btn_discription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="20dp"
            android:fontFamily="@font/nanum"
            android:text="@string/msearch_btn_discription"
            android:textAlignment="viewEnd"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/tsearch_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="15dp"
        app:cardElevation="2dp">

        <TextView
            android:id="@+id/tsearch_btn_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_200"
            android:fontFamily="@font/nanum_square_extra_bold"
            android:padding="20dp"
            android:text="@string/title_tsearch"
            android:textColor="@color/white"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/tsearch_btn_discription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="20dp"
            android:fontFamily="@font/nanum"
            android:text="@string/tsearch_btn_discription"
            android:textAlignment="viewEnd"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </androidx.cardview.widget.CardView>

</LinearLayout>